--- a/foundry.toml
+++ b/foundry.toml
@@ -4,3 +4,8 @@ out = "out"
 libs = ["lib"]
 
 # See more config options https://github.com/foundry-rs/foundry/tree/master/config
+
+[profile.default]
+remappings = [
+    "@openzeppelin/contracts=node_modules/@openzeppelin/contracts/"
+]
